--- a/FaceTweet/Views/Home/Index.cshtml
+++ b/FaceTweet/Views/Home/Index.cshtml
@@ -2,4 +2,17 @@
     ViewBag.Title = "Index";
 }
 
-<h1>Yo this is a test</h1>
+<div class="container">
+    <div class="col-md-offset-4 col-md-4">
+        <form role="form">
+            <h2 class="control-label">Sign in to Twitter</h2>
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="Email Address" required autofocus />
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="Password" required />
+            </div>
+            <button class="btn btn-block btn-lg btn-primary" type="submit">Sign In</button>
+        </form>
+    </div>
+</div>
