--- a/FaceTweet/Views/Home/Index.cshtml
+++ b/FaceTweet/Views/Home/Index.cshtml
@@ -1,18 +1,5 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
-
-<div class="container">
-    <div class="col-md-offset-4 col-md-4">
-        <form role="form">
-            <h2 class="control-label">Sign in to Twitter</h2>
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email Address" required autofocus />
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" required />
-            </div>
-            <button class="btn btn-block btn-lg btn-primary" type="submit">Sign In</button>
-        </form>
-    </div>
+﻿<div class="center-text">
+    <a href="@Url.Action("login")">
+        <img src="@Url.Content("Content/Images/twitterlogin_link.png")" />
+    </a>
 </div>
